# SAPResourceOptimizer

./: .gitignore  Makefile  README.md  README_old.md  REFACTORING_SUMMARY.md  analyze_pareto_results.py  app.py  best_strategy_summary.csv  config.py  create_pareto_focused_plot.py  data_preprocessing.py  idea_brainstorm.md  main.py  model_training.py  pareto_frontier_analysis.py  pyproject.toml  real_time_simulation.py  requirements.txt  run_sizey.py  serve_docs.py  temp_config.py  train_classifier.py  utils.py  visualization.py
app/: __init__.py  app.py  data_loader.py  utils.py
app/classification/: __init__.py  app_classification.py  best_strategy_summary_xgboost_10.csv  test_X.csv  xgboost_uncertainty_model.pkl
app/initial_approach/: __init__.py  app_regression.py  simulation_data.csv
app/qe/: __init__.py  app_qe.py  qe_tiny_under_alloc.pkl  simulation_data.csv
artifacts/experiments/: allocation_summary_report.csv  classification_results.csv  pareto_frontier_results.csv  (+1 more)
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
docs/: api.rst  cli.rst  conf.py  data.rst  index.rst  unified_models.md  usage.rst
eda/: eda.py  results.md  sort_data.py
output/: allocation_summary_report.csv  classification_results.csv  regression_results.csv
output_model_and_plots/: simulation_data.csv
output_plots_best_performer/: simulation_data.csv
resource_prediction/: __init__.py  config.py  preprocessing.py  reporting.py  utils.py
results/: summary_report.txt  summary_report_20250626_090644.txt  summary_report_20250626_091126.txt  summary_report_full_dataset.txt  summary_report_partial_dataset.txt
scripts/: convert_models_to_unified.py  test_app_basic.py  test_unified_wrapper.py
tests/: test_hyperparameter_search.py  test_simplified_model_registration.py  test_smoke_pipeline.py
(+98 files in other folders)
