[tool.poetry]
name = "resource-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "1.3.2"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

# ML libraries
xgboost = "^2.0.0"
lightgbm = "^4.0.0"
catboost = "^1.2.0"
tqdm = "^4.66.0"
optuna = "^3.5.0"

[tool.poetry.dev-dependencies]
sphinx = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
